[package]
name = "dist-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.18"
reqwest = "0.11.18"
snafu = "0.7.4"
tokio = { version =  "1.28.2", features = ["full"] } 
warp = "0.3.5"
