[package]
name = "dist-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chashmap = "2.2.2"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
log = "0.4.18"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
snafu = "0.7.4"
tokio = { version =  "1.28.2", features = ["full"] } 
warp = "0.3.5"
