[package]
name = "dist-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chashmap = "2.2.2"
chrono = "0.4.26"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
log = "0.4.18"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
ring = "0.16.20"
serde = { version = "1.0.163", features = ["derive"] }
serde_derive = "1.0.163"
serde_yaml = "0.9.21"
snafu = "0.7.4"
tokio = { version =  "1.28.2", features = ["full"] } 
warp = "0.3.5"
